# speculant-graph

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md   LICENSE  PRD.md  README.md  benchmark.py  build_graph.py  download_corpus.py  hello.py  pyproject.toml
assets/: ai_spec_2_final.mov
examples/: example.py  example_client.py  example_llama.py  example_seed.py  llama_knowledge_graph.pkl  visualize_graph.py
examples/corpus/: contract_law.txt  contract_wiki.txt  law_wiki.txt  legal_contracts.txt
scripts/: check_comments.py  check_no_docstrings.py
server/: app.py  models.py
src/speculant_graph/: __init__.py  config.py  download_utils.py  draft_generator.py  graph_builder.py  verifier.py
